tests/baselines/reference/continueNotInIterationStatement1.errors.txt
==== tests/cases/compiler/continueNotInIterationStatement1.ts (1 errors) ====
    continue;
    ~~~~~~~~~
!!! continueNotInIterationStatement1.ts(1,1): error TS2201: 'continue' statement can only be used within an enclosing iteration statement.